tests/NormalTests/paczka1/fuzzy1/37879258.err
Error in line 6: ngd S81 15,2
Error in line 10: ngd S661 33,3
Error in line 16: ngd S81 46,1
Error in line 29: aJea A381 189,2
